# fri-vzr-2026-p2

./: .envrc  .envrc.local.example  .gitignore  .rsync-filter  Makefile  README.md  pyproject.toml  run_lenia.sh
notebooks/: main.ipynb
results/: hpc  simple_local
scripts/: bench.sh  bench_hpc_cuda.sh  bench_hpc_entrypoint.sh  bench_hpc_omp.sh  bench_hpc_seq.sh  bench_simple_local.sh  bench_slurm.sh  make.sh  on_cluster.sh  run.sh  srun.sh  up.sh  with_modules.sh
sh_scripts/: run_local.sh
src_c/: float_alias.h  gifenc.c  gifenc.h  helper_cuda.h  impl.h  impl_cpu.c  impl_cuda.cu  impl_lenia.cu  lenia.cu  main.c  orbium.c  orbium.h
src_python/vzr_p2/: gif_comparator.py  gif_comparitor.py  kv_utils.py  notebook.py
